Fix config collapse button

--- a/master.css
+++ b/master.css
@@ -61,33 +61,41 @@ body.config {
   position: relative;
   height: 100vh;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 0.545em;
 }
 
 #config [name="close"] {
   transition:
-    opacity 0.2 ease-in;
+    background-color 0.2s ease-in;
     
   /*opacity: calc(0.25 * var(--config));*/
-  opacity: 0.33;
+  /*opacity: 0.33;*/
+  /*background: no-repeat 0% 0%/70% 100% url("https://image.flaticon.com/icons/svg/70/70429.svg");*/
+  background-color: hsl(0, 0%, 54%);
     
-  width: 12px;
-  height: 12px;
+  width: 100%;
+  height: 100%;
   /*background-image: url("https://image.flaticon.com/icons/svg/25/25705.svg");*/
-  background-image: url("https://image.flaticon.com/icons/svg/70/70429.svg");
-  position: absolute;
+  position: relative;
+  grid-column: 2;
+  grid-row: 1;
+  display: block;
   /*right: 0.85em;*/
-  left: 0.13em;
   /*top: 1.195em;*/
-  top: 1.35em;
-  z-index: 1;
+  /*left: 0.13em;*/
+  /*top: 1.35em;*/
+  /*z-index: 1;*/
 }
 
 #config [name="close"]:hover {
-  opacity: 0.4 !important;
+  /*opacity: 0.4 !important;*/
+  background-color: hsl(0, 0%, 52%);
 }
 
 #config [name="close"]:active {
-  opacity: 0.5 !important;
+  /*opacity: 0.5 !important;*/
+  background-color: hsl(0, 0%, 50%);
 }
 
 #config .content, #config fieldset {
@@ -100,10 +108,6 @@ body.config {
   position: relative;
 }
 
-#config fieldset {
-  margin-top: 0.8em;
-}
-
 #config .content {
   color: hsl(0, 0%, 95%);
   /*padding: 2.6em 2.2em;*/
@@ -113,6 +117,12 @@ body.config {
   width: 100%;
   padding-top: 0.21em;
   padding-bottom: 1em;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#config fieldset {
+  margin-top: 0.8em;
 }
 
 #config legend {
@@ -223,7 +233,7 @@ header {
 
 header form {
   display: grid;
-  grid-template-columns: auto auto 1fr auto/*2em*/ /*1.35em*/;
+  grid-template-columns: auto 1fr auto/*2em*/ /*1.35em*/;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
